--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
   </head>
-  <body class="h-dvh max-h-dvh text-xs sm:text-base">
+  <body class="h-dvh max-h-dvh text-xs sm:text-sm">
     <rp-root></rp-root>
   </body>
 </html>
